# duplicate-function-checker

./: Cargo.toml  README.md
src/: main.rs
